<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_settings">Settings</string>

    <string name="age">Age</string>

    <string name="app_name">BookStore</string>

    <string name="books_store">Book Store</string>

    <string name="cancel">Cancel</string>

    <string name="colony">Colony</string>
    <string name="city">City</string>

    <string name="email">Email</string>

    <string name="enter_email">Please enter email address</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_postal_code">Please enter postal code</string>
    <string name="enter_country">Please enter country</string>
    <string name="enter_state">Please enter state</string>
    <string name="enter_city">Please enter city</string>
    <string name="enter_street">Please enter street</string>
    <string name="enter_outdoor_number">Please enter outdoor number</string>

    <string name="fill_fields">Please fill all fields</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_photo">Profile photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="login">LOG IN</string>
    <string name="buy_pdf">Buy PDF</string>
    <string name="download_pdf">Download PDF</string>
    <string name="buy_physical_book">Buy physical book</string>

    <string name="municipality">Municipality</string>
    <string name="downloading_book">Downloading Book&#8230;</string>

    <string name="name">Name</string>
    <string name="failed">Failed</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="outdoor_number">Outdoor Number</string>
    <string name="btn_continue">Continue</string>

    <string name="password">Password</string>
    <string name="password_short">Password too short</string>

    <string name="phone">Phone</string>

    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="edit">Edit</string>

    <string name="register_domicile">Register Domicile</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="state">State</string>

    <string name="street">Street</string>

    <string name="title_activity_main">Books</string>
</resources>
